--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "client": "cd client && npm start"
   },
   "dependencies": {
-    "concurrently": "^9.0.1"
+    "concurrently": "^9.0.1",
+    "helmet": "^8.0.0"
   }
 }
